# flapjax

./: .gitignore  LICENSE  README  compatilibity.xlsx
OOPSLA2009/: flapjax.js  repl.html
OOPSLA2009/Demo/: flapjax.js  style.css  twitter.html  twitter.js
OOPSLA2009/FakeTwitter/: FakeTwitter.cabal  LICENSE
OOPSLA2009/FakeTwitter/src/: FakeTwitter.hs
OOPSLA2009/Presentation/: index.html  repl.html  style.css
compiler/: .gitignore  CHANGELOG  Flapjax.cabal  LICENSE  Setup.hs  debianize.sh  deploy.sh
compiler/data/: .gitignore
compiler/deb/DEBIAN/: control
compiler/mac-installer.pmdoc/: 01usr-contents.xml  01usr.xml  index.xml
compiler/src/: Computation.hs  FxREPL.hs  Fxc.hs  Fxdev.hs  Misc.hs
compiler/src/BrownPLT/Flapjax/: CompilerMessage.hs  DevServer.hs  Interface.hs  ReplServer.hs
compiler/src/Flapjax/: Builder.hs  Compiler.hs  HtmlEmbedding.hs  Parser.hs  Symbols.hs  Syntax.hs  gensyms-haskell.js
demos/: carousel.html  clean.html  drag.html  filters-button.html  filters.fx  filters.html  listdrag.html  oldping.html  ping.html  resizable.html  unsafe.html
doc/: Makefile  doc.html  single-page.css
doc/fxdoc/: links.ss  make-doc.ss  vim.ss  xexpr.ss
examples/: flapjax.min.js  mouse.html  mouse1.html  timer1.html
fx/: CHANGELOG  Flash4AJAX.swf  LICENSE  Makefile  TODO  flapjax-impl.js  flapjax.js  flapjax.jsi  fxws.js  tests.html
fx/fvlogger/: index.html  logger.js  readme.txt
fx/tests/: filter_repeats_1.html
new-src/: Makefile  core.js  dom.js  flapjax.js  test.html  test.js  testDom.js
src/: Makefile  flapjax.js  testSuite.js
src/fvlogger/: logger.css
tools/: Makefile
website/: DEPLOYMENT  Makefile  build-static.hs  deploy-fxsite-static.sh  deploy-fxsite.sh  deploy-local.sh  fxinternal.conf
website/persistence/: settings.py  urls.py
website/persistence/fxserver/: views.py
website/static/: bot.xml  demo.css  flapjax.css  footer.xml  header.xml  index.shtml  repl.html  style.css  top.xml
website/static/demos/: Xdomain.html  calc.html  (+46 more)
(+18 files in other folders)
