Name:           Flapjax
Version:        2.0.1
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2006-2009 The Flapjax Team
License:        BSD3
License-file:   LICENSE
Author:         Arjun Guha, Michael Greenberg
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://www.flapjax-lang.org/
Stability:      provisional
Category:       Language
Build-Type:     Custom
Synopsis:       Flapjax compiler
Data-Dir:       data
Data-Files:     flapjax.js flapjax.debug.js flapjax.jsi
Description:
 

Executable fxc
  Main-Is: Fxc.hs
  Hs-Source-Dirs: src

  Build-Depends:
    base>=4, mtl>=1.1.0.1, parsec<3.0.0, pretty>=0.1, containers>=0.1, syb>=0.1,
    filepath>=1.1.0.1, random>=1.0.0.1, WebBits>=0.15, directory, 
    JsContracts>=0.4, xhtml
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
    Generics DeriveDataTypeable
